Fixed another graphical bug on mobile.

--- a/ttrpg_stat_blocks/theme.css
+++ b/ttrpg_stat_blocks/theme.css
@@ -764,12 +764,6 @@ input:checked + .slider:before {
 		grid-area: 1/3/2/4;
 	}
 
-	input:checked + .slider:before {
-		-webkit-transform: translateX(0.38235in);
-		-ms-transform: translateX(0.38235in);
-		transform: translateX(0.38235in);
-	}
-
 	h1 {
 		grid-area: 2/1/3/4;
 	}
